removed <hr> tag

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <h4>140, City Center, New York, USA</h4>
                        </div>
                    </div>
-            </div><hr>
+            </div>
              <br><br>
              
             <div class="skills-container">
