--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <span>Joyce Harrison</span>
                     <h4>Graphic Designer & web Developer</h4>
                     <div class="buttons">
-                        <span>Download CV</span> <span>Hire Me</span>
+                        <a id="cv" href="./Aravindh(CV).pdf" download="downloaded CV"><span>Download CV</span> </a><span><a href="#">Hire Me</a></span>
                     </div>
                 </div>
                  <img src="https://cdn.pixabay.com/photo/2017/04/01/21/06/portrait-2194457__340.jpg" alt="">
