--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
        <div class="profile">
             <div class="display-picture">
                 <div class="details">
-                    <span>Joyce Harrison</span>
+                    <span>Aravindh</span>
                     <h4>Graphic Designer & web Developer</h4>
                     <div class="buttons">
                         <a id="cv" href="./Aravindh(CV).pdf" download="downloaded CV"><span>Download CV</span> </a><span><a href="#">Hire Me</a></span>
                     </div>
                 </div>
-                 <img src="https://cdn.pixabay.com/photo/2017/04/01/21/06/portrait-2194457__340.jpg" alt="">
+                 <img src="https://avatars.githubusercontent.com/u/83901906?s=120&v=4" alt="">
             </div>
             
             <div class="banner">
@@ -56,7 +56,7 @@
                         <h4>28</h4>
                         <h4>developersCommunity@gmail.com</h4>
                         <h4>+0718-111-0011</h4>
-                        <h4>140, City Center, New York, USA</h4>
+                        <h4>140, North street,Edaiyur-Thiruthuraipoondi </h4>
                        </div>
                    </div>
             </div>
