--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <h4>Address</h4>
                        </div>
                        <div class="div2">
-                        <h4>28</h4>
+                        <h4>21</h4>
                         <h4>developersCommunity@gmail.com</h4>
                         <h4>+0718-111-0011</h4>
                         <h4>140, North street,Edaiyur-Thiruthuraipoondi </h4>
@@ -76,19 +76,19 @@
                           </div>
                         <h4>JavaScript</h4>
                         <div class="progress">
-                            <div class="progress-bar " role="progressbar" style="width:35%;background-color: rgb(37, 156, 241);" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar " role="progressbar" style="width:80%;background-color: rgb(37, 156, 241);" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                           </div>
                       </div>
                       <div class="design">
-                        <h4>Adobe Photoshop</h4>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width:95%;background-color: #00a877;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                        <h4>Sketch</h4>
+                        <h4>React</h4>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" style="width:50%;background-color: #00a877;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                           </div>
-                        <h4>Adobe XD</h4>
+                        <h4>Adobe Photoshop</h4>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width:40%;background-color: #00a877;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                          </div>
+                        <h4>Figma</h4>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" style="width:25%;background-color: #00a877;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                           </div>
