--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="content">
                    <div class=" about col-6">
                     <h3>About Me</h3><br>
-                    <h4>Hello I'm Joyce Horrison. I am passionate about UI/UX design and Web Design .I am a skilled Front-end Developer and master of Web Design tools such as Photoshop and Sketch</h4>
+                    <h4>Hello I'm Aravindh. I am passionate about UI/UX design and Web Design .I am a skilled Front-end Developer and i have some intermediate knowledge in Web Design tools such as Photoshop and Figma</h4>
                    </div>
                    <div class="contact col-6" >
                        <div class="div1">
